--- a/bookingsite/src/Components/Card2.css
+++ b/bookingsite/src/Components/Card2.css
@@ -1,23 +1,106 @@
+/* Card.css */
+
+.cards-container {
+  display: flex;
+    flex-wrap: wrap;
+    gap: 20px; /* Adjust spacing between cards */
+    justify-content: center; /* Center the cards */
+  }
+
+
+.cimgg {
+  width: 370px;
+  height: auto;
+  border-radius: 8px 8px 0px 0px;
+}
+
+.headingg {
+  color: white;
+  padding-left: 0px;
+  margin-top: 8px;
+  margin-left: 30px;
+  font-size: 32px;
+  margin-bottom: 10px;
+}
+
+.locc {
+  color: white;
+  margin-left: 12px;
+  padding-left: 20px;
+  font-size: 18px;
+  font-weight: 300;
+  padding-right: 20px;
+  margin-bottom: 5px;
+}
+
+.Containerr {
+  border: 3px solid;
+  border-radius: 8px;
+  width: 370px;
+  background-color: #131313;
+  border-color: #191919;
+  padding: 10px; /* Add padding inside each card */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add some shadow to each card */
+  transition: transform 0.3s, box-shadow 0.3s; /* Smooth transition */
+}
+
+.pricee {
+  color: white;
+  font-size: medium;
+  font-weight: 400;
+  font-size: 22px;
+  border: 1px solid;
+  padding: 4px;
+  border-radius: 8px;
+  margin-left: 40px;
+  background-color: #346751;
+  border-color: #00000000;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.btncc {
+  background-color: #00000000;
+  color: white;
+  padding: 1rem 6rem; /* Increase padding to make the button larger */
+  font-size: 1.5rem; /* Increase font size */
+  border: 1px solid; /* Make the border thicker */
+  cursor: pointer;
+  margin-left: 28px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+  border-color: #ffffff;
+  border-radius: 8px;
+}
+
+.Container:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
 .old{
-    color: red ;
-    font-size:15px ;
-    padding: 0px;
-    margin-left: 3px ;
-    text-decoration-line: line-through ;
+  color: red ;
+  font-size:15px ;
+  padding: 0px;
+  margin-left: 3px ;
+  text-decoration-line: line-through ;
 
 }
 .pricee{
-    margin-left: 0px;
-    color: white ;
-    font-size: medium;
-    font-weight: 400 ;
-    font-size: 22px  ;
-    border: 1px solid ;
-    padding: 4px;
-    border-radius: 8px ;
-    margin-left: 5px ;
-    background-color: #346751 ;
-    border-color: #00000000;
-    padding-top: 0px ;
-    padding-bottom: 0px 
+  margin-left: 0px;
+  color: white ;
+  font-size: medium;
+  font-weight: 400 ;
+  font-size: 22px  ;
+  border: 1px solid ;
+  padding: 4px;
+  border-radius: 8px ;
+  margin-left: 5px ;
+  background-color: #346751 ;
+  border-color: #00000000;
+  padding-top: 0px ;
+  padding-bottom: 0px 
+}
+.Containerr:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
