--- a/bookingsite/src/Components/AllPackagesSection.css
+++ b/bookingsite/src/Components/AllPackagesSection.css
@@ -8,8 +8,9 @@
   }
   
   .cimg {
-    width: 370px;
-    height: auto;
+    width: 100%;
+    height: 370px !important;
+    object-fit: cover;
     border-radius: 8px 8px 0px 0px;
   }
   
@@ -36,6 +37,9 @@
     border: 3px solid;
     border-radius: 8px;
     width: 370px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     background-color: #131313;
     border-color: #191919;
     padding: 10px; /* Add padding inside each card */
@@ -60,16 +64,17 @@
   
   .btnc {
     background-color: #00000000;
+    width: 100%;
     color: white;
     padding: 1rem 6rem; /* Increase padding to make the button larger */
     font-size: 1.5rem; /* Increase font size */
     border: 1px solid; /* Make the border thicker */
     cursor: pointer;
-    margin-left: 28px;
     margin-top: 15px;
     margin-bottom: 20px;
     border-color: #ffffff;
     border-radius: 8px;
+    align-self: center;
   }
   
   .Container:hover {
