--- a/bookingsite/src/Components/DarkForm.css
+++ b/bookingsite/src/Components/DarkForm.css
@@ -1,61 +1,67 @@
-/* components/DarkForm.css */
 .dark-form {
-   
-    color: #fff;
-    padding: 30px;
-    border-radius: 12px;
-    max-width: 400px;
-    margin: 0 auto;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    font-family: 'Arial', sans-serif;
-  }
+  color: #fff;
+  padding: 30px 0px 30px 30px;
+  border-radius: 12px;
+  max-width: 400px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  font-family: 'Arial', sans-serif;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+  font-size: 14px;
+  color: #bbb;
+}
+
+.form-group input {
+  width: 100%;
+  padding: 12px 15px;
+  border: 1px solid #444;
+  border-radius: 8px;
+  background-color: #333;
+  color: #fff;
+  font-size: 16px;
+}
+
+.form-group input::placeholder {
+  color: #888;
+}
+
+.form-group input:focus {
+  outline: none;
+  border-color: #888;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center ;
+  width: 100%;
+}
+
+button {
+  background-color: #346751;
+  color: #fff;
+  border: none;
+  padding: 12px 20px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  flex: 1;
+  width: 45%;
+  margin-top: 10px;
   
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  .form-group label {
-    display: block;
-    margin-bottom: 8px;
-    font-weight: bold;
-    font-size: 14px;
-    color: #bbb;
-  }
-  
-  .form-group input {
-    width: 100%;
-    padding: 12px 15px;
-    border: 1px solid #444;
-    border-radius: 8px;
-    background-color: #333;
-    color: #fff;
-    font-size: 16px;
-  }
-  
-  .form-group input::placeholder {
-    color: #888;
-  }
-  
-  .form-group input:focus {
-    outline: none;
-    border-color: #888;
-  }
-  
-  button {
-    background-color: #346751;
-    color: #fff;
-    border: none;
-    padding: 12px 20px;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-    width: 100%;
-  }
-  
-  button:hover {
-    background-color: #c2185b;
-    transform: translateY(-2px);
-  }
-  
+}
+
+button:hover {
+  background-color: #c2185b;
+  transform: translateY(-2px);
+}
