--- a/bookingsite/src/Components/AllPackagesSection.css
+++ b/bookingsite/src/Components/AllPackagesSection.css
@@ -1,10 +1,11 @@
 /* Card.css */
 
 .cards-container {
+  width: 100%;
     display: flex;
     flex-wrap: wrap;
     gap: 20px; /* Adjust spacing between cards */
-    justify-content: center; /* Center the cards */
+    justify-content: start; /* Center the cards */
   }
   
   .cimg {
@@ -36,7 +37,7 @@
   .Container {
     border: 3px solid;
     border-radius: 8px;
-    width: 370px;
+    width: 350px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
