--- a/bookingsite/src/Components/BottomSheet.css
+++ b/bookingsite/src/Components/BottomSheet.css
@@ -1,6 +1,9 @@
-.conus{
+.conus {
+    width: 100%;
+    align-self: center;
+    text-align: center;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 34px;
   }
   .dis{
     font-size: 8px;
