added animation for appearing for bottom sheet

--- a/bookingsite/src/Components/BottomSheet.module.css
+++ b/bookingsite/src/Components/BottomSheet.module.css
@@ -29,6 +29,35 @@
     padding: 20px;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
     position: absolute;
+    overflow-y: auto;
+    scrollbar-width: none;
+    animation: appear 0.3s ease-in-out forwards;
+  }
+
+  @keyframes appear {
+    0% {
+      opacity: 0;
+      transform: translateY(100%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .bottomSheet.hide {
+    animation: disappear 0.3s ease-in-out forwards;
+  }
+
+  @keyframes disappear {
+    0% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    100% {
+      opacity: 0;
+      transform: translateY(100%);
+    }
   }
   
   .closeButton {
