--- a/bookingsite/src/Components/AllPackagesSection.css
+++ b/bookingsite/src/Components/AllPackagesSection.css
@@ -17,11 +17,9 @@
   
   .heading {
     color: white;
-    padding-left: 0px;
     margin-top: 8px;
-    margin-left: 30px;
+    margin: 10px;
     font-size: 32px;
-    margin-bottom: 10px;
   }
   
   .loc {
