--- a/bookingsite/src/Components/hero.css
+++ b/bookingsite/src/Components/hero.css
@@ -51,7 +51,7 @@
 .hero {
   width: 100%;
   min-height: 100vh;
-  background-image: url('https://images.unsplash.com/photo-1721248677632-627ae777ca23?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  background-image: url('https://images.pexels.com/photos/1005486/pexels-photo-1005486.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
   background-repeat: no-repeat;
   background-size: cover;
   padding: 5px;
