--- a/bookingsite/src/Components/AllPackagesSection.css
+++ b/bookingsite/src/Components/AllPackagesSection.css
@@ -30,6 +30,7 @@
     font-weight: 300;
     padding-right: 20px;
     margin-bottom: 5px;
+    height: 100%;
   }
   
   .Container {
@@ -54,7 +55,6 @@
     border: 1px solid;
     padding: 4px;
     border-radius: 8px;
-    margin-left: 40px;
     background-color: #346751;
     border-color: #00000000;
     padding-top: 0px;
