--- a/bookingsite/src/Components/Content.css
+++ b/bookingsite/src/Components/Content.css
@@ -6,11 +6,11 @@ body {
 .loca {
   color: rgb(255, 255, 255);
   
- 
+  width: 90%;
   font-size: 28px;
   font-weight: 300;
  
-  margin-bottom: 5px;
+  margin: 25px;
   font-family: 'Open Sans', sans-serif; /* Apply the new font */
 }
 
@@ -21,7 +21,6 @@ body {
   border: 1px solid;
   padding: 8px 12px; /* Increased padding */
   border-radius: 8px;
-  margin-left: 20px; /* Adjusted margin */
   background-color: #346751;
   border-color: #00000000;
   margin-left: 1px;
@@ -30,15 +29,16 @@ body {
 
 .cimg {
   width: 320px;
-  height: auto;
+  height: 370px;
   border-radius: 8px 8px 8px 8px;
- object-fit: cover
+  object-fit: cover;
+  margin-top: 30px;
 }
 
 .text {
   font-size: 48px;
   color: white;
-  margin-left: 10px;
+  margin: 25px;
   font-family: 'Open Sans', sans-serif; /* Apply the new font */
 }
 
