--- a/bookingsite/src/Components/DarkForm.css
+++ b/bookingsite/src/Components/DarkForm.css
@@ -57,7 +57,7 @@ button {
   transition: background-color 0.3s ease, transform 0.3s ease;
   flex: 1;
   width: 45%;
-  margin-top: 10px;
+  margin: 25px;
   
 }
 
