--- a/bookingsite/src/pages/details/[id].css
+++ b/bookingsite/src/pages/details/[id].css
@@ -1,8 +1,7 @@
 /* app/package/[id]/page.css */
 .page2-container {
     display: flex;
-   
-    
+    width: 100%;
     padding: 20px;
     margin-right: 20%;
 }
@@ -24,17 +23,17 @@
         flex-direction: column;
         align-items: center;
         padding: 10px;
-        max-width: 80%; /* Make the container smaller */
         margin: 0 auto; /* Center the container */
     }
     
     .page2-container > * {
         flex: none; /* Reset flex property */
         margin-bottom: 20px; /* Add space between items */
+        width: 95%;
     }
     
     .dark-form {
-        max-width: 90%; /* Make the form larger */
+        max-width: 95%; /* Make the form larger */
         margin: 0 auto; /* Center the form */
     }
 }
