--- a/bookingsite/src/Components/Content.css
+++ b/bookingsite/src/Components/Content.css
@@ -43,8 +43,9 @@ body {
 }
 
 .Container {
-  margin-left: 20%;
+  margin-left: 25%;
   margin-top: 50px;
+  margin-right: 25% ;
 }
 .zoz{
   display: flex ;
@@ -58,8 +59,9 @@ body {
 
 @media (max-width: 768px) {
   .Container {
-      margin-left: 0;
+      
       margin-top: 20px;
+      
       padding: 0 10px; /* Add padding to avoid content touching edges */
   }
   
