--- a/bookingsite/src/Components/BottomSheet.module.css
+++ b/bookingsite/src/Components/BottomSheet.module.css
@@ -90,7 +90,9 @@
   
   .phoneIcon {
     margin: 10px; /* Space between the icon and the phone number */
-    justify-self: start
+    justify-self: start;
+   
+    
   }
   .dis{
     font-size: 15px;
@@ -108,6 +110,9 @@
     left: 0;
     top: 0;
     bottom: 0;
+    
+    
+   
   }
   .numberAndText{
     display: flex;
@@ -128,7 +133,7 @@
     top: 0;
     bottom: 0;
     margin-left: 70px;
-    color: #1C274C;
+    
   }
   /* BottomSheet.module.css */
 
