--- a/bookingsite/src/Components/Content.css
+++ b/bookingsite/src/Components/Content.css
@@ -1,6 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
+
 body {
   background-color: black;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Cairo', sans-serif;
 }
 
 .loca {
@@ -11,7 +14,7 @@ body {
   font-weight: 300;
  
   margin: 25px;
-  font-family: 'Open Sans', sans-serif; /* Apply the new font */
+  font-family: 'Cairo', sans-serif; /* Apply the new font */
 }
 
 .price {
@@ -25,6 +28,7 @@ body {
   border-color: #00000000;
   margin-left: 1px;
   font-family: 'Open Sans', sans-serif; /* Apply the new font */
+  font-family: 'Cairo', sans-serif;
 }
 
 .cimg {
@@ -39,22 +43,24 @@ body {
   font-size: 48px;
   color: white;
   margin: 25px;
-  font-family: 'Open Sans', sans-serif; /* Apply the new font */
-}
+  font-family: 'Cairo', sans-serif;}
 
 .Container {
   margin-left: 25%;
   margin-top: 50px;
   margin-right: 25% ;
+  font-family: 'Cairo', sans-serif;
 }
 .zoz{
   display: flex ;
   justify-content: space-around ;
+  font-family: 'Cairo', sans-serif;
   
 }
 .wordss{
   margin-right: 30px;
   width: 100%;
+  font-family: 'Cairo', sans-serif;
 }
 
 @media (max-width: 768px) {
