--- a/bookingsite/src/app/globals.css
+++ b/bookingsite/src/app/globals.css
@@ -1,33 +1,20 @@
-
-
-
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
 
 * {
- 
   padding: 0;
   margin: 0;
+  
 }
 
 html,
 body {
   max-width: 100%;
   overflow-x: hidden;
-  background-color: black  ;
-
+  background-color: black;
+  font-family: 'Cairo', sans-serif;
 }
 
 body {
-  
-
   width: 100%;
-  
-  
- 
+  font-family: 'Cairo', sans-serif;
 }
-
-
-
-
-
-
-
