--- a/bookingsite/src/Components/hero.css
+++ b/bookingsite/src/Components/hero.css
@@ -51,7 +51,7 @@
 .hero {
   width: 100%;
   min-height: 100vh;
-  background-image: url('../../public/assets/main-bg.jpg');
+  background-image: url('../../public/assets/massage-3795691_1920.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   padding: 5px;
