--- a/bookingsite/src/Components/BottomSheet.module.css
+++ b/bookingsite/src/Components/BottomSheet.module.css
@@ -134,7 +134,7 @@
   /* BottomSheet.module.css */
 
 .dialogOverlay {
-  position: fixed;
+  position: absolute ;
   top: 0;
   left: 0;
   width: 100%;
@@ -153,7 +153,7 @@
   padding: 20px;
   max-width: 500px;
   width: 100%;
-  position: relative;
+  position: relative ;
   display: flex;
   flex-direction: column;
   display: flex;
